fix all services dropdown height and internal toolbar button alignment

--- a/src/components/AllServicesDropdown/AllServicesDropdown.scss
+++ b/src/components/AllServicesDropdown/AllServicesDropdown.scss
@@ -12,7 +12,7 @@
 
 .chr-c-page__services-nav-dropdown-menu {
   @media screen and (min-width: 1450px) {
-    top: 55px;
+    top: 84px;
     height: 100vh;
   }
   @media screen and (max-width: 1450px) {
